<?xml version="1.0"?>
<package>

  <name>sim_plugin_compass</name>
  <version>0.0.1</version>

  <description>The sim_plugin_compass package</description>

  <maintainer email="a.symington@ucl.ac.uk">Andrew Symington</maintainer>

  <author email="r.denardi@ucl.ac.uk">Renzo De Nardi</author>

  <license>BSD</license>

  <url type="website">https://github.com/UCL-CompLACS/qrsim</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sim</build_depend>
  <build_depend>hal</build_depend>
  <build_depend>hal_sensor_compass</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sim</run_depend>
  <run_depend>hal</run_depend>
  <run_depend>hal_sensor_compass</run_depend>
  
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}/resources" gazebo_model_path="${prefix}/resources/models"/>
  </export>
  
</package>