<?xml version="1.0"?>
<package>

  <name>uas_hal</name>
  
  <version>0.0.1</version>
  
  <description>
    The uas_hal package provides a set of Hardware Abstraction Layers (HAL) for platforms and sensors. 
    The general idea is to mask the underlying detail of the platform, allowing applications to access
    the devices using predefined messages.
  </description>
  
  <maintainer email="a.symington@ucl.ac.uk">Andrew Symington</maintainer>
  <author email="r.denardi@ucl.ac.uk">Renzo De Nardi</author>
  
  <license>BSD</license>
  
  <url type="website">https://github.com/UCL-CompLACS/qrsim</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>