<?xml version="1.0"?>
<package>

  <name>hal_sensor_gnss</name>
  
  <version>0.1.0</version>
  
  <description>Provides an abstract class for a GNSS module, such as GPS or Glonass.</description>
  
  <author email="a.symington@ucl.ac.uk">Andrew Symington</author>
  <author email="r.denardi@ucl.ac.uk">Renzo De Nardi</author>
  <maintainer email="a.symington@ucl.ac.uk">Andrew Symington</maintainer>
  <license>PLEASE REFER TO LICENCE IN PROJECT ROOT</license>  
  <url type="website">https://github.com/UCL-CompLACS/qrsim</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geomtry_msgs</build_depend>
  <build_depend>hal</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hal</run_depend>

</package>